pulled ridey 22aug

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -3,16 +3,16 @@
     "colors_solid_button_labels": "#fafafa",
     "colors_accent_1": "#171a21",
     "gradient_accent_1": "",
-    "colors_accent_2": "#cef53c",
-    "gradient_accent_2": "linear-gradient(320deg, rgba(56, 78, 197, 1) 16%, rgba(203, 68, 194, 1) 52%, rgba(255, 201, 104, 1) 87%)",
+    "colors_accent_2": "#caff80",
+    "gradient_accent_2": "linear-gradient(112deg, rgba(24, 74, 107, 1), rgba(27, 95, 130, 1) 18%, rgba(48, 111, 153, 1) 22%, rgba(45, 101, 151, 1) 30%, rgba(56, 134, 169, 1) 48%, rgba(72, 131, 209, 1) 57%, rgba(65, 151, 209, 1) 72%, rgba(75, 145, 183, 1) 73%, rgba(65, 151, 209, 1) 87%, rgba(63, 117, 166, 1) 95%)",
     "colors_text": "#c7d5e0",
     "colors_outline_button_labels": "#1878b9",
-    "colors_background_1": "#729005",
+    "colors_background_1": "#171a21",
     "gradient_background_1": "linear-gradient(167deg, rgba(27, 40, 56, 1), rgba(42, 71, 94, 1) 79%, rgba(42, 71, 94, 1) 100%)",
     "colors_background_2": "#caff80",
     "gradient_background_2": "linear-gradient(139deg, rgba(23, 26, 33, 1), rgba(42, 71, 94, 1) 51%, rgba(66, 123, 193, 1) 100%)",
-    "type_header_font": "oswald_n5",
-    "heading_scale": 140,
+    "type_header_font": "oswald_n7",
+    "heading_scale": 125,
     "type_body_font": "avenir_next_n5",
     "body_scale": 100,
     "page_width": 1600,
@@ -40,10 +40,10 @@
     "inputs_shadow_horizontal_offset": 0,
     "inputs_shadow_vertical_offset": 4,
     "inputs_shadow_blur": 5,
-    "card_style": "card",
+    "card_style": "standard",
     "card_image_padding": 0,
     "card_text_alignment": "left",
-    "card_color_scheme": "background-2",
+    "card_color_scheme": "accent-2",
     "card_border_thickness": 0,
     "card_border_opacity": 10,
     "card_corner_radius": 6,
@@ -79,10 +79,10 @@
     "drawer_shadow_vertical_offset": 4,
     "drawer_shadow_blur": 5,
     "badge_position": "top left",
-    "badge_corner_radius": 40,
-    "sale_badge_color_scheme": "accent-2",
+    "badge_corner_radius": 6,
+    "sale_badge_color_scheme": "background-2",
     "sold_out_badge_color_scheme": "background-1",
-    "accent_icons": "text",
+    "accent_icons": "accent-2",
     "social_twitter_link": "",
     "social_facebook_link": "https:\/\/facebook.com\/zoomie.eu",
     "social_pinterest_link": "",
@@ -96,10 +96,10 @@
     "predictive_search_show_vendor": false,
     "predictive_search_show_price": false,
     "favicon": "shopify:\/\/shop_images\/efe1k7bj1mg41.webp",
-    "currency_code_enabled": true,
+    "currency_code_enabled": false,
     "cart_type": "notification",
-    "show_vendor": false,
-    "show_cart_note": false,
+    "show_vendor": true,
+    "show_cart_note": true,
     "sections": {
       "announcement-bar": {
         "type": "announcement-bar",
@@ -107,7 +107,7 @@
           "announcement-bar-0": {
             "type": "announcement",
             "settings": {
-              "text": "Howdy there, brother. Welcome on Zoomie.",
+              "text": "An initiative made possible by the European Union",
               "color_scheme": "accent-1",
               "link": ""
             }
@@ -123,13 +123,14 @@
         "type": "header",
         "settings": {
           "color_scheme": "accent-1",
-          "logo_width": 80,
+          "logo": "shopify:\/\/shop_images\/zoomie_name_4.png",
+          "logo_width": 140,
           "logo_position": "middle-left",
           "menu": "main-menu",
           "menu_type_desktop": "dropdown",
-          "show_line_separator": true,
+          "show_line_separator": false,
           "enable_sticky_header": true,
-          "margin_bottom": 0,
+          "margin_bottom": 12,
           "padding_top": 20,
           "padding_bottom": 20
         }
