--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -9,7 +9,7 @@
     "colors_outline_button_labels": "#1878b9",
     "colors_background_1": "#171a21",
     "gradient_background_1": "linear-gradient(167deg, rgba(27, 40, 56, 1), rgba(42, 71, 94, 1) 79%, rgba(42, 71, 94, 1) 100%)",
-    "colors_background_2": "#caff80",
+    "colors_background_2": "#171a21",
     "gradient_background_2": "linear-gradient(139deg, rgba(23, 26, 33, 1), rgba(42, 71, 94, 1) 51%, rgba(66, 123, 193, 1) 100%)",
     "type_header_font": "oswald_n7",
     "heading_scale": 125,
@@ -38,9 +38,9 @@
     "inputs_radius": 0,
     "inputs_shadow_opacity": 0,
     "inputs_shadow_horizontal_offset": 0,
-    "inputs_shadow_vertical_offset": 4,
+    "inputs_shadow_vertical_offset": -4,
     "inputs_shadow_blur": 5,
-    "card_style": "standard",
+    "card_style": "card",
     "card_image_padding": 0,
     "card_text_alignment": "left",
     "card_color_scheme": "accent-2",
