--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -84,13 +84,13 @@
     "sold_out_badge_color_scheme": "background-1",
     "accent_icons": "accent-2",
     "social_twitter_link": "",
-    "social_facebook_link": "https:\/\/facebook.com\/zoomie.eu",
+    "social_facebook_link": "https:\/\/www.facebook.com\/Zoomie-102316145872258",
     "social_pinterest_link": "",
-    "social_instagram_link": "http:\/\/instagram.com\/zoomie.eu",
+    "social_instagram_link": "https:\/\/www.instagram.com\/zoomie_eu\/",
     "social_tiktok_link": "https:\/\/tiktok.com\/@zoomie.eu",
     "social_tumblr_link": "",
     "social_snapchat_link": "",
-    "social_youtube_link": "https:\/\/www.youtube.com\/zoomie.eu",
+    "social_youtube_link": "https:\/\/www.youtube.com\/channel\/UCBnuCSjzZ6JpN2859PGulig",
     "social_vimeo_link": "",
     "predictive_search_enabled": true,
     "predictive_search_show_vendor": false,
