--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -141,7 +141,7 @@
           "menu_type_desktop": "dropdown",
           "show_line_separator": false,
           "enable_sticky_header": true,
-          "margin_bottom": 12,
+          "margin_bottom": 0,
           "padding_top": 20,
           "padding_bottom": 20
         }
@@ -190,7 +190,7 @@
           "newsletter_enable": false,
           "newsletter_heading": "",
           "show_social": true,
-          "enable_country_selector": false,
+          "enable_country_selector": true,
           "enable_language_selector": false,
           "payment_enable": true,
           "margin_top": 0,
